[gd_scene load_steps=4 format=3 uid="uid://word_matching_uid"]

[ext_resource type="Script" path="res://scripts/WordMatching.gd" id="1_wordmatch"]
[ext_resource type="Theme" path="res://assets/vocab_zoo_theme.tres" id="2_theme"]
[ext_resource type="Texture2D" uid="uid://bpc6q2aites4q" path="res://assets/pixelart_starfields (1)/pixelart_starfield_corona.png" id="3_starfield"]

[node name="WordMatching" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_wordmatch")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
texture = ExtResource("3_starfield")
stretch_mode = 6

[node name="QuestionPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -220.0
offset_right = 350.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="QuestionPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="InstructionLabel" type="Label" parent="QuestionPanel/VBoxContainer"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.973, 0.98, 0.988, 1)
theme_override_font_sizes/font_size = 20
text = "Which word means:"
horizontal_alignment = 1

[node name="DefinitionLabel" type="Label" parent="QuestionPanel/VBoxContainer"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.973, 0.98, 0.988, 1)
theme_override_font_sizes/font_size = 22
text = "\"definition text here\""
horizontal_alignment = 1
autowrap_mode = 3

[node name="Spacer" type="Control" parent="QuestionPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="AnswerA" type="Button" parent="QuestionPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Answer A"

[node name="AnswerB" type="Button" parent="QuestionPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Answer B"

[node name="AnswerC" type="Button" parent="QuestionPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Answer C"

[node name="AnswerD" type="Button" parent="QuestionPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Answer D"

[node name="FeedbackLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = 220.0
offset_right = 300.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.973, 0.98, 0.988, 1)
theme_override_font_sizes/font_size = 18
text = "Feedback"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Character" type="Node2D" parent="."]
position = Vector2(180, 400)

